--- a/index.html
+++ b/index.html
@@ -122,27 +122,27 @@
   { front: './images/card24.png', back: './images/back24.png' },
   { front: './images/card25.png', back: './images/back25.png' },
   { front: './images/card26.png', back: './images/back26.png' },
-  { front: './images/card27.png', back: './images/back27.png' },
-  { front: './images/card28.png', back: './images/back28.png' },
-  { front: './images/card29.png', back: './images/back29.png' },
-  { front: './images/card30.png', back: './images/back30.png' },
-  { front: './images/card31.png', back: './images/back31.png' },
-  { front: './images/card32.png', back: './images/back32.png' },
-  { front: './images/card33.png', back: './images/back33.png' },
-  { front: './images/card34.png', back: './images/back34.png' },
-  { front: './images/card35.png', back: './images/back35.png' },
-  { front: './images/card36.png', back: './images/back36.png' },
-  { front: './images/card37.png', back: './images/back37.png' },
-  { front: './images/card38.png', back: './images/back38.png' },
-  { front: './images/card39.png', back: './images/back39.png' },
-  { front: './images/card40.png', back: './images/back40.png' },
-  { front: './images/card41.png', back: './images/back41.png' },
-  { front: './images/card42.png', back: './images/back42.png' },
-  { front: './images/card43.png', back: './images/back43.png' },
-  { front: './images/card44.png', back: './images/back44.png' },
-  { front: './images/card45.png', back: './images/back45.png' },
-  { front: './images/card46.png', back: './images/back46.png' },
-  { front: './images/card47.png', back: './images/back47.png' },
+  { front: './images/card27.png', back: './images/back27.jpg' },
+  { front: './images/card28.png', back: './images/back28.jpg' },
+  { front: './images/card29.png', back: './images/back29.jpg' },
+  { front: './images/card30.png', back: './images/back30.jpg' },
+  { front: './images/card31.png', back: './images/back31.jpg' },
+  { front: './images/card32.png', back: './images/back32.jpg' },
+  { front: './images/card33.png', back: './images/back33.jpg' },
+  { front: './images/card34.png', back: './images/back34.jpg' },
+  { front: './images/card35.png', back: './images/back35.jpg' },
+  { front: './images/card36.png', back: './images/back36.jpg' },
+  { front: './images/card37.png', back: './images/back37.jpg' },
+  { front: './images/card38.png', back: './images/back38.jpg' },
+  { front: './images/card39.png', back: './images/back39.jpg' },
+  { front: './images/card40.png', back: './images/back40.jpg' },
+  { front: './images/card41.png', back: './images/back41.jpg' },
+  { front: './images/card42.png', back: './images/back42.jpg' },
+  { front: './images/card43.png', back: './images/back43.jpg' },
+  { front: './images/card44.png', back: './images/back44.jpg' },
+  { front: './images/card45.png', back: './images/back45.jpg' },
+  { front: './images/card46.png', back: './images/back46.jpg' },
+  { front: './images/card47.png', back: './images/back47.jpg' },
     ];
     const rainbowCards = [
     { front: './images/card201.jpg', back: './images/back1.png' },
@@ -171,27 +171,27 @@
   { front: './images/card224.jpg', back: './images/back24.png' },
   { front: './images/card225.jpg', back: './images/back25.png' },
   { front: './images/card226.jpg', back: './images/back26.png' },
-  { front: './images/card227.jpg', back: './images/back27.png' },
-  { front: './images/card228.jpg', back: './images/back28.png' },
-  { front: './images/card229.jpg', back: './images/back29.png' },
-  { front: './images/card230.jpg', back: './images/back30.png' },
-  { front: './images/card231.jpg', back: './images/back31.png' },
-  { front: './images/card232.jpg', back: './images/back32.png' },
-  { front: './images/card233.jpg', back: './images/back33.png' },
-  { front: './images/card234.jpg', back: './images/back34.png' },
-  { front: './images/card235.jpg', back: './images/back35.png' },
-  { front: './images/card236.jpg', back: './images/back36.png' },
-  { front: './images/card237.jpg', back: './images/back37.png' },
-  { front: './images/card238.jpg', back: './images/back38.png' },
-  { front: './images/card239.jpg', back: './images/back39.png' },
-  { front: './images/card240.jpg', back: './images/back40.png' },
-  { front: './images/card241.jpg', back: './images/back41.png' },
-  { front: './images/card242.jpg', back: './images/back42.png' },
-  { front: './images/card243.jpg', back: './images/back43.png' },
-  { front: './images/card244.jpg', back: './images/back44.png' },
-  { front: './images/card245.jpg', back: './images/back45.png' },
-  { front: './images/card246.jpg', back: './images/back46.png' },
-  { front: './images/card247.jpg', back: './images/back47.png' },
+  { front: './images/card227.jpg', back: './images/back27.jpg' },
+  { front: './images/card228.jpg', back: './images/back28.jpg' },
+  { front: './images/card229.jpg', back: './images/back29.jpg' },
+  { front: './images/card230.jpg', back: './images/back30.jpg' },
+  { front: './images/card231.jpg', back: './images/back31.jpg' },
+  { front: './images/card232.jpg', back: './images/back32.jpg' },
+  { front: './images/card233.jpg', back: './images/back33.jpg' },
+  { front: './images/card234.jpg', back: './images/back34.jpg' },
+  { front: './images/card235.jpg', back: './images/back35.jpg' },
+  { front: './images/card236.jpg', back: './images/back36.jpg' },
+  { front: './images/card237.jpg', back: './images/back37.jpg' },
+  { front: './images/card238.jpg', back: './images/back38.jpg' },
+  { front: './images/card239.jpg', back: './images/back39.jpg' },
+  { front: './images/card240.jpg', back: './images/back40.jpg' },
+  { front: './images/card241.jpg', back: './images/back41.jpg' },
+  { front: './images/card242.jpg', back: './images/back42.jpg' },
+  { front: './images/card243.jpg', back: './images/back43.jpg' },
+  { front: './images/card244.jpg', back: './images/back44.jpg' },
+  { front: './images/card245.jpg', back: './images/back45.jpg' },
+  { front: './images/card246.jpg', back: './images/back46.jpg' },
+  { front: './images/card247.jpg', back: './images/back47.jpg' },
     ];
     const secretCards = [
   { front: './images/card301.jpg', back: './images/back301.jpg', orientation: 'horizontal' },
