--- a/index.html
+++ b/index.html
@@ -279,5 +279,15 @@ document.getElementById('close-button').addEventListener('click', () => {
   overlay.classList.remove('show');
 });
   </script>
+<audio id="bg-music" src="./audio/background.mp3" autoplay loop muted></audio>
+<script>
+  // Sblocca l'audio al primo clic
+  window.addEventListener('click', () => {
+    const audio = document.getElementById('bg-music');
+    audio.muted = false;
+    audio.play();
+  }, { once: true });
+</script>
+
 </body>
 </html>
